--- a/app/app.csproj
+++ b/app/app.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\waf\WAF.csproj" />
+    <ProjectReference Include="..\waf\WiffWaff.csproj" />
   </ItemGroup>
 
 </Project>
